@@ -1,3 +1,8 @@
+2005-02-09  Corinna Vinschen  <vinschen@redhat.com>
+
+	* symmisc.c: Include gdb_stat.h.
+	(maintenance_print_msymbols): Use inode numbers to compare files.
+
 2005-02-09  Andrew Cagney  <cagney@gnu.org>
 
 	* config/sh/linux.mt (TDEPFILES): Add symfile-mem.o.
